Upon Ctrl+C cancel flow control

If flow control is enabled, it is cancelled upon Ctrl+C.  This mimics
xterm results.
BUG: 293534
FIXED-IN: 4.9