src/Vt102Emulation.cpp
@@ -977,10 +977,15 @@ void Vt102Emulation::sendKeyEvent(QKeyEvent* event)
 
     // check flow control state
     if (modifiers & Qt::ControlModifier) {
-        if (event->key() == Qt::Key_S)
+        switch (event->key()) {
+        case Qt::Key_S:
             emit flowControlKeyPressed(true);
-        else if (event->key() == Qt::Key_Q)
+            break;
+        case Qt::Key_Q:
+        case Qt::Key_C: // cancel flow control
             emit flowControlKeyPressed(false);
+            break;
+        }
     }
 
     // lookup key binding
